--- a/GameClient/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient/GameClient.vcxproj
@@ -80,6 +80,9 @@
   <ItemGroup>
     <ClCompile Include="scr\Game.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\Game.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
