--- a/GameClient/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient/GameClient.vcxproj
@@ -50,7 +50,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\GameKIT\hge\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\GameKIT\hge\include;C:\GameKIT\GameClient\GameClient\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -78,7 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="scr\Computing.cpp" />
+    <ClCompile Include="scr\GameComputing.cpp" />
     <ClCompile Include="scr\Game.cpp" />
     <ClCompile Include="scr\GameControl.cpp" />
     <ClCompile Include="scr\GameGraphInterface.cpp" />
@@ -87,7 +87,7 @@
     <ClCompile Include="scr\GameObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Computing.h" />
+    <ClInclude Include="include\GameComputing.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\GameControl.h" />
     <ClInclude Include="include\GameGraphInterface.h" />
