--- a/GameClient/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient/GameClient.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\Model">
       <UniqueIdentifier>{cc152bd8-e9ad-4498-b097-c42466758dbc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Viewer">
+      <UniqueIdentifier>{3ad993ca-4325-45cb-aa01-8b554152534c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Viewer">
+      <UniqueIdentifier>{b488b6bb-2120-445d-8de5-47420b16eb68}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="scr\Game.cpp">
@@ -45,6 +51,15 @@
     <ClCompile Include="src\IdGenerator.cpp">
       <Filter>Source Files\Model</Filter>
     </ClCompile>
+    <ClCompile Include="src\GameViewer.cpp">
+      <Filter>Source Files\Viewer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GamePaintObj.cpp">
+      <Filter>Source Files\Viewer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GameGetDataObj.cpp">
+      <Filter>Source Files\Viewer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -70,6 +85,15 @@
     </ClInclude>
     <ClInclude Include="include\IdGenerator.h">
       <Filter>Header Files\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="include\GameViewer.h">
+      <Filter>Header Files\Viewer</Filter>
+    </ClInclude>
+    <ClInclude Include="include\GamePaintObj.h">
+      <Filter>Header Files\Viewer</Filter>
+    </ClInclude>
+    <ClInclude Include="include\GameGetDataObj.h">
+      <Filter>Header Files\Viewer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
