--- a/GameClient/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient/GameClient.vcxproj
@@ -96,7 +96,7 @@
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\GameControl.h" />
     <ClInclude Include="include\GameGetDataObj.h" />
-    <ClInclude Include="include\GameGraphInterface.h" />
+    <ClInclude Include="include\Tunnel_Model_to_Viewer.h" />
     <ClInclude Include="include\GameNetworkInterface.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\GameModel.h" />
